modules/compute/main.tf
resource "aws_security_group" "allow_web" {
  name   = "allow_web_traffic"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "web_server" {
  ami                    = "ami-0c55b159cbfafe1f0"
  instance_type          = var.instance_type
  subnet_id              = var.public_subnet_id
  vpc_security_group_ids = [aws_security_group.allow_web.id]

  user_data = <<-EOF
#!/bin/bash
sudo yum update -y
sudo amazon-linux-extras install docker -y
sudo service docker start
sudo usermod -a -G docker ec2-user
sudo docker run -d -p 80:80 --name web-site nginx
sleep 5
sudo docker exec web-site sh -c "echo '<h1>Liav DevOps Project - Managed by Terraform</h1>' > /usr/share/nginx/html/index.html"
EOF

  tags = { Name = "Liav-DevOps-Server" }
}

output "server_ip" {
  value = aws_instance.web_server.public_ip
}
